all category API is completely setup and design is done and prefectly everything is worked

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -88,7 +88,7 @@ This files table contents are outlined below>>>>>
 /*================================================
 Default CSS
 =================================================*/
-$font-family: 'Poppins', sans-serif;
+$font-family: 'Tiro Bangla', serif;
 $light-green-color: #44ce6f;
 $white-color: #ffffff;
 $black-color: #0e314c;
